--- a/k8s-ingress.yaml
+++ b/k8s-ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
-  - host: gimmelinux.local
+  - host: gimmelinux.com
     http:
       paths:
       - path: /api(/|$)(.*)
