--- a/k8s-ingress.yaml
+++ b/k8s-ingress.yaml
@@ -5,18 +5,19 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
   - host: gimmelinux.com
     http:
       paths:
-      - path: /api(/|$)(.*)
+      - path: /api
         pathType: Prefix
         backend:
           service:
             name: gimmelinux-backend
             port:
               number: 8000
-      - path: /(.*)
+      - path: /
         pathType: Prefix
         backend:
           service:
