add Kubernetes NetworkPolicy for dind service to restrict egress traffic

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,7 @@ jobs:
         kubectl apply -f k8s-deployment-frontend.yaml
         kubectl apply -f k8s-deployment-dind.yaml
         kubectl apply -f k8s-ingress.yaml
+        kubectl apply -f k8s-networkprot.yaml
 
 
 
